crates/gh-render/tests/snapshots/diff_snapshots__added.snap
---
source: crates/gh-render/tests/diff_snapshots.rs
expression: "flatten(&one_file(\"added\", PatchStatus::Added, 3, 0))"
---
src/added.rs (added)
+3 -0
@@ -0,0 +1,3 @@
+pub fn hello() {
+    println!("hi");
+}
