crates/gh-render/tests/snapshots/diff_snapshots__diff_with_multiline_comment_thread.snap
---
source: crates/gh-render/tests/diff_snapshots.rs
expression: "flatten_with_threads(&files, &threads)"
---
src/foo.rs (modified)
+1 -1
@@ -1,3 +1,3 @@
 unchanged
-let count = old_value(42);
+let count = new_value(43);
▏ @bob: this looks risky
▏        did you check the boundary case?
 trailing
