crates/gh-render/tests/snapshots/diff_snapshots__diff_with_one_thread.snap
---
source: crates/gh-render/tests/diff_snapshots.rs
expression: "flatten_with_threads(&files, &threads)"
---
src/foo.rs (modified)
+1 -1
@@ -1,3 +1,3 @@
 unchanged
-let count = old_value(42);
+let count = new_value(43);
▏ @alice: rename to total_count
 trailing
