crates/gh-render/tests/snapshots/diff_snapshots__mixed_lang.snap
---
source: crates/gh-render/tests/diff_snapshots.rs
expression: flatten(&files)
---
src/count.rs (modified)
+4 -2
@@ -1,5 +1,7 @@
 use std::collections::HashMap;
 
-fn count(items: &[i32]) -> usize {
-    items.len()
+fn count(items: &[i32]) -> u32 {
+    let mut n: u32 = 0;
+    for _ in items { n += 1; }
+    n
 }

Cargo.toml (modified)
+2 -1
@@ -1,3 +1,4 @@
 [package]
 name = "demo"
-version = "0.1.0"
+version = "0.2.0"
+description = "now with more features"
