crates/gh-render/tests/snapshots/diff_snapshots__multi_hunk.snap
---
source: crates/gh-render/tests/diff_snapshots.rs
expression: "flatten(&one_file(\"multi_hunk\", PatchStatus::Modified, 2, 1))"
---
src/multi_hunk.rs (modified)
+2 -1
@@ -1,3 +1,3 @@
-old first
+new first
 unchanged
@@ -10,2 +10,3 @@
 context
+inserted
 trailing
