crates/gh-render/tests/snapshots/diff_snapshots__multiple_files_separated_by_blank_line.snap
---
source: crates/gh-render/tests/diff_snapshots.rs
expression: flatten(&files)
---
src/a.rs (modified)
+1 -1
@@ -1,3 +1,3 @@
 line one
-line two
+line TWO
 line three

src/b.rs (added)
+3 -0
@@ -0,0 +1,3 @@
+pub fn hello() {
+    println!("hi");
+}
