crates/gh-render/tests/snapshots/diff_snapshots__unknown_ext.snap
---
source: crates/gh-render/tests/diff_snapshots.rs
expression: "flatten(&one_file_at(\"unknown_ext\", \"Cargo.toml\", PatchStatus::Modified, 2,\n1,))"
---
Cargo.toml (modified)
+2 -1
@@ -1,3 +1,4 @@
 [package]
 name = "demo"
-version = "0.1.0"
+version = "0.2.0"
+description = "now with more features"
